--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.parse:parse-android:1.11.0'
+    compile files('libs/twilio-common-android.jar')
+    compile files('libs/twilio-ip-messaging-android.jar')
 }
