--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".activities.LoginActivity" />
         <activity
             android:name=".activities.MainChatActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main_chat"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.ForgotPasswordActivity"></activity>
