--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.MainChatActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main_chat"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.ForgotPasswordActivity"></activity>
+        <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:screenOrientation="portrait"/>
         <service
             android:name="com.twilio.ipmessaging.TwilioIPMessagingClientService"
             android:exported="false" />
