Format date for each message

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.parse:parse-android:1.11.0'
+    compile 'joda-time:joda-time:2.9.1'
+
 }
