--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.parse'
 
 android {
     compileSdkVersion 23
@@ -21,12 +20,11 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
     compile 'com.twilio.sdk:twilio-common-android:0.1.17'
     compile 'com.twilio.rtd.android:twilio-ip-messaging-android:0.4.11'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.parse:parse-android:1.11.0'
     compile 'joda-time:joda-time:2.9.1'
-
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    testCompile 'junit:junit:4.12'
 }
