--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.twilio.sdk:twilio-common-android:0.1.17'
-    compile 'com.twilio.rtd.android:twilio-ip-messaging-android:0.4.11'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'joda-time:joda-time:2.9.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/twilio-common-android.jar')
+    compile files('libs/twilio-ip-messaging-android.jar')
 }
