--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.LaunchActivity"
+            android:name=".landing.LaunchActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -26,10 +26,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".landing.LoginActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.MainChatActivity"
+            android:name=".chat.MainChatActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main_chat"
             android:theme="@style/AppTheme.NoActionBar"/>
