--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'joda-time:joda-time:2.9.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/twilio-common-android-0.3.1.jar')
-    compile files('libs/twilio-ip-messaging-android.jar')
+    compile 'com.twilio:common-android:0.6.1'
+    compile 'com.twilio:ip-messaging-android:0.9.1'
 }
