--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission android:name="com.twilio.chat.demo.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.twilio.chat.demo.permission.C2D_MESSAGE" />
+
+
     <application
         android:name=".application.TwilioChatApplication"
         android:allowBackup="true"
