--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.twilio.twiliochat"
@@ -21,11 +21,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'joda-time:joda-time:2.9.1'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.1'
-    testCompile 'junit:junit:4.12'
-    compile "com.twilio:chat-android:0.11.2"
-    compile 'com.twilio:accessmanager-android:0.1.0'
+    implementation 'com.android.support:appcompat-v7:23.1.1'
+    implementation 'com.android.support:design:23.1.1'
+    implementation 'joda-time:joda-time:2.9.1'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.1'
+    testImplementation 'junit:junit:4.12'
+    implementation "com.twilio:chat-android:0.11.2"
+    implementation 'com.twilio:accessmanager-android:0.1.0'
 }
